--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ body {
 
 .left-column {
   background-color: #BBBFCA;
-  height: 100%;
+  height: 100vh;
   left: 0;
   margin: 0;
   position: absolute;
