--- a/assets/style.css
+++ b/assets/style.css
@@ -52,7 +52,7 @@ ul {
   margin-top: 5px;
 }
 
-@media screen and (min-width 600px){
+@media screen and (max-width: 600px){
   .hide {
     display: none;
   }
