--- a/todo.css
+++ b/todo.css
@@ -8,4 +8,17 @@
   margin: 5px;
   text-align: center;
   width: 25px;
+  border: none;
+  display: inline-block;
+}
+
+h1 {
+  font-family: 'Roboto', sans-serif;
+  margin: 0
+}
+
+#column {
+  width: 300px;
+  margin: auto;
+  margin-top: 200px;
 }
