--- a/todo.css
+++ b/todo.css
@@ -1,7 +1,3 @@
-.hidden {
-  display: none;
-}
-
 #addTask {
   font-size: 1rem;
   height: 25px;
@@ -12,9 +8,15 @@
   display: inline-block;
 }
 
-h1 {
-  font-family: 'Roboto', sans-serif;
-  margin: 0
+body {
+  font-family: 'Courier Prime', monospace;
+  font-size: smaller;
+}
+
+button {
+  margin: 0px;
+  border: none;
+  color:rgb(150, 150, 150);
 }
 
 #column {
@@ -22,3 +24,52 @@ h1 {
   margin: auto;
   margin-top: 200px;
 }
+
+.grey {
+  color:rgb(150, 150, 150);
+}
+
+h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 3rem;
+  margin: 0;
+}
+
+.hidden {
+  display: none;
+}
+
+hr {
+  border-color: rgb(200, 200, 200);
+  color:rgb(200, 200, 200);
+  margin: 0;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 100%;
+}
+
+.inheritWidth {
+  width: 100%;
+}
+
+.taskContent {
+  margin-bottom: 5px;
+}
+
+#taskField { 
+  height: 200px;
+}
+
+.taskTitle {
+  color:rgb(150, 150, 150);
+  margin-bottom: 5px; 
+}
+
+#titleField {
+  margin-bottom: 7px;
+}
+
+
+
+
+
