--- a/todo.css
+++ b/todo.css
@@ -11,6 +11,7 @@
 body {
   font-family: 'Courier Prime', monospace;
   font-size: smaller;
+  background-color: darkgray;
 }
 
 button {
@@ -20,13 +21,19 @@ button {
 }
 
 #column {
-  width: 300px;
+  background-color: rgb(245,245,245);
   margin: auto;
   margin-top: 200px;
+  padding: 20px;
+  width: 300px;
 }
 
 .grey {
   color:rgb(150, 150, 150);
+}
+
+.darkgrey {
+  color:rgb(50, 50, 50);
 }
 
 h1 {
@@ -39,9 +46,12 @@ h1 {
   display: none;
 }
 
+.invisible {
+  visibility :hidden;  
+}
+
 hr {
-  border-color: rgb(200, 200, 200);
-  color:rgb(200, 200, 200);
+  border: 1px solid rgb(240, 240, 240);
   margin: 0;
   margin-bottom: 10px;
   margin-top: 10px;
@@ -53,7 +63,8 @@ hr {
 }
 
 .taskContent {
-  margin-bottom: 5px;
+  font-family: Helvetica, sans-serif;
+  margin-bottom: 10px;
 }
 
 #taskField { 
