update for september

--- a/assets/style.css
+++ b/assets/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .left-column {
-  background-color: #bbbfca;
+  /*background-color: #bbbfca;*/
   height: 100%;
   left: 0;
   margin: 0;
